# pgadmin

./: .dockerignore  .gitignore  .pycodestyle  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check-container-build.yml  check-doc-builds.yml  check-javascript-style.yml  check-python-build.yml  check-python-style.yml  check-tarball-build.yml  check-translations.yml  run-javascript-tests.yml  run-python-tests-epas.yml  run-python-tests-pg.yml  sonarqube-scan.yml
docs/en_US/: code_overview.rst  code_review.rst  coding_standards.rst  conf.py  container_deployment.rst  deployment.rst  desktop_deployment.rst  getting_started.rst  import_export_servers.rst  index.rst  licence.rst  managing_cluster_objects.rst  managing_database_objects.rst  master_password.rst  menu_bar.rst  mfa.rst  modifying_tables.rst  preferences.rst  release_notes_1_0.rst  release_notes_1_1.rst  release_notes_1_2.rst  release_notes_1_3.rst  release_notes_1_4.rst  release_notes_1_5.rst  release_notes_1_6.rst  release_notes_2_0.rst  release_notes_2_1.rst  release_notes_3_0.rst  release_notes_3_1.rst  release_notes_3_2.rst  release_notes_3_3.rst  release_notes_3_4.rst  release_notes_3_5.rst  release_notes_3_6.rst  release_notes_4_0.rst  release_notes_4_1.rst  release_notes_4_10.rst  release_notes_4_11.rst  release_notes_4_12.rst  release_notes_4_13.rst  (+64 more)
pkg/debian/: README.md  build.sh  pgadmin.conf
pkg/docker/: README.md  entrypoint.sh  run_pgadmin.py
pkg/linux/: build-functions.sh  pgadmin.desktop  setup-web.sh
pkg/mac/: README.md  build-functions.sh  build.sh  entitlements.plist.in  licence.rtf
pkg/pip/: build.sh  setup_pip.py
pkg/redhat/: README.md  build.sh  pgadmin.conf  repo-rpm.sh
pkg/src/: build.sh
pkg/win32/: README.md  installer.iss.in
runtime/: .eslintrc.js  dev_config.json  dev_config.json.in  package.json
runtime/src/html/: configure.html  pgadmin.html  view_log.html
runtime/src/js/: configure.js  misc.js  pgadmin.js  server_error.js  view_log.js
tools/: copyright_updater.py  dependency_inventory.py  get_chromedriver.py  get_sb_package.py  setup-python-env.sh  sql_keywords.py  update_selenoid_browsers.py
web/: .eslintrc.js  config.py  config_local.py  karma.conf.js  package.json  pgAdmin.py  pgAdmin.wsgi  pgAdmin4.py  pgAdmin4.wsgi  pgadmin.themes.json  setup.py  setup_deps.sh  setup_local_deps.sh  webpack.config.js  webpack.shim.js  webpack.test.config.js
web/migrations/: env.py  script.py.mako
web/migrations/versions/: 02b9dccdcfcb_.py  09d53fca90c7_.py  1586db67b98e_.py  15c88f765bc8_.py  35f29b1701bd_.py  398697dc9550_.py  3c1e4b6eda55_.py  3ce25f562f3b_.py  493cd3e39c0c_.py  50aad68f99c2_.py  6650c52670c2_.py  7c56ea250085_.py  7fedf8531802_.py  81c7ffeffeee_.py  84700139beb0_.py  a091c9611d20_.py  a39bd015b644_.py  a68b374fe373_.py  a77a0932a568_.py  aa86fb60b73d_.py  aff1436e3c8c_.py  b5b87fdfcb30_.py  c465fee44968_.py  c6974f64df08_.py  ca00ec32581b_.py  d0bc9f32b2b9_.py  d39482714a2e_.py  d85a62333272_.py  ec1cac3399c9_.py  ece2e76bf60e_.py  ef590e979b0d_.py  f195f9a4923d_.py  f656e56dfdc8_.py  f79844e926ae_.py  fdc58d9bd449_.py
web/pgacloud/: pgacloud.py
web/pgacloud/providers/: _abstract.py  aws.py  azure.py  biganimal.py  google.py
web/pgacloud/utils/: io.py  misc.py
web/pgadmin/: __init__.py  evaluate_config.py  messages.pot
web/pgadmin/about/: __init__.py
web/pgadmin/authenticate/: __init__.py  internal.py  kerberos.py  ldap.py  oauth2.py  registry.py  webserver.py
web/pgadmin/browser/: __init__.py  collection.py  register_browser_preferences.py  utils.py
web/pgadmin/dashboard/: __init__.py
web/pgadmin/help/: __init__.py
web/pgadmin/misc/: __init__.py
web/pgadmin/model/: __init__.py
web/pgadmin/preferences/: __init__.py
web/pgadmin/redirects/: __init__.py
web/pgadmin/settings/: __init__.py
web/pgadmin/setup/: __init__.py  data_directory.py  db_table_check.py  db_upgrade.py  db_version.py  user_info.py
web/pgadmin/templates/: base.html
web/pgadmin/tools/: __init__.py
web/pgadmin/utils/: __init__.py  ajax.py  compile_template_name.py  constants.py  crypto.py  csrf.py  enhanced_log_rotation.py  exception.py  heartbeat.py  html.py  locker.py  menu.py  passexec.py  paths.py  preferences.py  route.py  security_headers.py  server_utils.py  session.py  validation_utils.py  (+1 more)
web/regression/: .coveragerc.in  README.md  __init__.py  runtests.py  test_config.json.in  test_setup.py
(+1343 files in other folders)
