[tool.poetry]
name = "pgadmin4"
version = "0.1.0"
description = ""
authors = ["zzz <imzqqq@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "==2.2.*"
flask-gravatar = "==0.*"
flask-login = "==0.*"
flask-mail = "==0.*"
flask-migrate = "==4.*"
greenlet = {version = "1.1.2", markers = "python_version <= \"3.10\""}
flask-sqlalchemy = "==3.0.*"
flask-wtf = "1.1.1"
flask-compress = "==1.*"
flask-paranoid = "==0.*"
flask-babel = "==3.1.*"
flask-security-too = "==5.1.*"
flask-socketio = "==5.3.*"
wtforms = "==3.0.*"
passlib = "==1.*"
pytz = "==2023.*"
speaklater3 = "==1.*"
sqlparse = "==0.*"
psutil = "==5.9.*"
psycopg = {version = "3.1.8", extras = ["binary"]}
python-dateutil = "==2.*"
sqlalchemy = "==2.*"
bcrypt = "==4.0.*"
cryptography = "==40.0.*"
sshtunnel = "==0.*"
ldap3 = "==2.*"
gssapi = "==1.8.*"
eventlet = "0.33.3"
httpagentparser = "==1.9.*"
user-agents = "2.2.0"
authlib = "==1.2.*"
requests = "==2.30.*"
pyotp = "==2.*"
qrcode = "==7.*"
pillow = "==9.*"
boto3 = "==1.26.*"
botocore = "==1.29.*"
urllib3 = "==1.26.*"
azure-mgmt-rdbms = "10.1.0"
azure-mgmt-resource = "23.0.0"
azure-mgmt-subscription = "3.1.1"
azure-identity = "1.13.0"
google-api-python-client = "==2.*"
google-auth-oauthlib = "1.0.0"
werkzeug = "2.2.3"
keyring = "==23.*"
sphinx = "^7.0.1"
sphinxcontrib-youtube = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
