[tool.poetry]
name = "pgadmin4"
version = "0.1.0"
description = ""
authors = ["zzz <imzqqq@hotmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10"
flask = "==2.2.*"
flask-gravatar = "==0.*"
flask-login = "==0.*"
flask-mail = "==0.*"
flask-migrate = "==4.*"
greenlet = {version = "1.1.2", markers = "python_version <= \"3.10\""}
flask-sqlalchemy = "==3.0.*"
flask-wtf = "1.1.1"
flask-compress = "==1.*"
flask-paranoid = "==0.*"
flask-babel = "==3.1.*"
flask-security-too = "==5.1.*"
flask-socketio = "==5.3.*"
wtforms = "==3.0.*"
passlib = "==1.*"
pytz = "==2023.*"
speaklater3 = "==1.*"
sqlparse = "==0.*"
psutil = "==5.9.*"
psycopg = {version = "3.1.8", extras = ["binary"]}
python-dateutil = "==2.*"
sqlalchemy = "==2.*"
bcrypt = "==4.0.*"
cryptography = "==40.0.*"
sshtunnel = "==0.*"
ldap3 = "==2.*"
gssapi = "==1.8.*"
eventlet = "0.33.3"
httpagentparser = "==1.9.*"
user-agents = "2.2.0"
authlib = "==1.2.*"
requests = "==2.30.*"
pyotp = "==2.*"
qrcode = "==7.*"
pillow = "==9.*"
boto3 = "==1.26.*"
botocore = "==1.29.*"
urllib3 = "==1.26.*"
azure-mgmt-rdbms = "10.1.0"
azure-mgmt-resource = "23.0.0"
azure-mgmt-subscription = "3.1.1"
azure-identity = "1.13.0"
google-api-python-client = "==2.*"
google-auth-oauthlib = "1.0.0"
werkzeug = "2.2.3"
keyring = "==23.*"
sphinx = "^7.0.1"
sphinxcontrib-youtube = "^1.2.0"

# Optional deps
extras = { version = ">=1.0.0", optional = true }
fixtures = { version = ">=4.1.0", optional = true }
linecache2 = { version = ">=1.0.0", optional = true }
pbr = { version = ">=5.11.1", optional = true }
pycodestyle = { version = ">=2.5.0", optional = true }
python-mimeparse = { version = ">=1.6.0", optional = true }
testscenarios = { version = ">=0.5.0", optional = true }
testtools = { version = ">=2.6.0", optional = true }
traceback2 = { version = ">=1.4.0", optional = true }
selenium = { version = ">=4.10.0", optional = true }
coverage = { version = ">=7.2.7", optional = true }

[tool.poetry.extras]
# NB: Packages that should be part of `poetry install -E` need to be specified
extras = ["extras"]
fixtures = ["fixtures"]
linecache2 = ["linecache2"]
pbr = ["pbr"]
pycodestyle = ["pycodestyle"]
python-mimeparse = ["python-mimeparse"]
testscenarios = ["testscenarios"]
testtools = ["testtools"]
traceback2 = ["traceback2"]
selenium = ["selenium"]
coverage = ["coverage"]

all = [
	"extras", 
	"fixtures", 
	"linecache2", 
	"pbr", 
	"pycodestyle", 
	"python-mimeparse", 
	"testscenarios", 
	"testtools", 
	"traceback2", 
	"selenium", 
	"coverage"
]

[tool.poetry.dev-dependencies]
## We pin black so that our tests don't start failing on new releases.
isort = ">=5.10.1"
black = ">=22.3.0"
flake8-comprehensions = "*"
flake8-bugbear = ">=21.3.2"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
